--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,16 @@ install: true
 
 os: linux
 dist: trusty
-jdk: oraclejdk8
+jdk: oraclejdk11
 
-script:
-  - ./gradlew build
+jobs:
+  include:
+    - stage: build
+      script:
+        - ./gradlew build
+    - stage: docker
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -t folfix/quick-app -f src/main/docker/Dockerfile build/libs
+        - docker push folfix/quick-app
+
